--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "Polylang",
   "description": "Rich Polylang language support for Visual Studio Code",
   "version": "0.0.1",
+  "publisher": "durudex",
+  "repository": "https://github.com/durudex/vscode-polylang",
   "engines": {
     "vscode": "^1.74.0"
   },
